# livepic

./: .gitmodules  CMakeLists.txt  README.md  SYSTEM_CHECK_REPORT.md  _SYSTEM_CHECK_REPORT.txt  build.gradle  settings.gradle
.github/workflows/: android-release.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  heif_encoder.cpp
app/src/main/java/com/cl/vlive/: LivePhotoExporter.kt  LivePhotoUtils.java  MainActivity.java  MainActivity.kt  MediaStoreSaver.kt
app/src/main/java/com/cl/vtolive/: MainActivity.java
app/src/main/java/com/cl/vtolive/activities/: ExportActivity.java  HomeActivity.java  IntervalSelectionActivity.java  PreviewActivity.java
app/src/main/java/com/cl/vtolive/modules/core/: LivePhotoEncoder.java  MetadataGenerator.java  MovMetadataInjector.java  VideoSegmentEncoder.java
app/src/main/java/com/cl/vtolive/modules/export/: ExportManager.java
app/src/main/java/com/cl/vtolive/modules/ui/: IntervalSelectorActivity.java  TimelineView.java
app/src/main/java/com/cl/vtolive/modules/video/: VideoProcessor.java
app/src/main/java/com/cl/vtolive/utils/: FileUtils.java  FlowExtras.java  LivePhotoConstants.java  PermissionHelper.java  TimeFormatUtils.java
app/src/main/res/drawable/: bg_gradient.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  info_background.xml
app/src/main/res/layout/: activity_export.xml  activity_home.xml  activity_interval_selection.xml  activity_interval_selector.xml  activity_main.xml  activity_preview.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
